--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "devDependencies": {
     "commander": "^6.2.0",
     "download-git-repo": "^3.0.2",
-    "glob": "^7.1.6"
+    "glob": "^7.1.6",
+    "handlebars": "^4.7.6",
+    "inquirer": "^7.3.3",
+    "latest-version": "^5.1.0",
+    "metalsmith": "^2.3.0"
   }
 }
